Fixed spacing on Shop Stuff page.

--- a/themes/inhabitent/sass/_products-category.scss
+++ b/themes/inhabitent/sass/_products-category.scss
@@ -1,6 +1,6 @@
 .tax-product_type {
   .page-title {
-    padding-top: 72px;
+    padding-top: 75px;
     padding-bottom: 20px;
   }
 
