--- a/themes/inhabitent/sass/_products.scss
+++ b/themes/inhabitent/sass/_products.scss
@@ -7,6 +7,7 @@
     letter-spacing: 2px;
     text-align: center;
     text-transform: uppercase;
+    margin-top: 100px;
   }
 
   .shop-category-container {
